--- a/userStories/package.json
+++ b/userStories/package.json
@@ -13,15 +13,17 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~10.0.9",
-    "@angular/cdk": "^9.2.4",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "~10.0.9",
     "@angular/compiler": "~10.0.9",
     "@angular/core": "~10.0.9",
     "@angular/forms": "~10.0.9",
-    "@angular/material": "^9.2.4",
+    "@angular/material": "^10.1.3",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
+    "angular-responsive-carousel": "^1.2.9",
+    "ngx-device-detector": "^1.4.6",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
