--- a/backend/composer.json
+++ b/backend/composer.json
@@ -16,11 +16,14 @@
         "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
+        "symfony/filesystem": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/mime": "5.1.*",
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
         "symfony/serializer": "5.1.*",
+        "symfony/translation": "5.1.*",
         "symfony/yaml": "5.1.*",
         "zumba/json-serializer": "^3.0"
     },
