--- a/userStories/package.json
+++ b/userStories/package.json
@@ -19,10 +19,12 @@
     "@angular/core": "~10.0.9",
     "@angular/forms": "~10.0.9",
     "@angular/material": "^10.1.3",
+    "@angular/material-moment-adapter": "^10.1.3",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
     "angular-responsive-carousel": "^1.2.9",
+    "moment": "^2.27.0",
     "ngx-device-detector": "^1.4.6",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
