--- a/userStories/package.json
+++ b/userStories/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "quickstart": "ng serve --proxy-config proxy.conf.json"
+    "quickstart": "ng serve --proxy-config proxy.conf.json --host=0.0.0.0 --disableHostCheck"
   },
   "private": true,
   "dependencies": {
@@ -18,12 +18,14 @@
     "@angular/compiler": "~10.0.9",
     "@angular/core": "~10.0.9",
     "@angular/forms": "~10.0.9",
+    "@angular/localize": "~10.0.9",
     "@angular/material": "^10.1.3",
     "@angular/material-moment-adapter": "^10.1.3",
     "@angular/platform-browser": "~10.0.9",
     "@angular/platform-browser-dynamic": "~10.0.9",
     "@angular/router": "~10.0.9",
-    "angular-responsive-carousel": "^1.2.9",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "bootstrap": "^4.5.2",
     "moment": "^2.27.0",
     "ngx-device-detector": "^1.4.6",
     "rxjs": "~6.6.2",
